// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Tool Header Horizontal Paddings 1`] = `
<section>
  <h4>
    Size S (1rem)
  </h4>
  

  <div
    class="fd-tool-header fd-tool-header--sm"
    style="max-width: 500px;"
  >
    
    
    <div
      class="fd-tool-header__group"
    >
      
        
      <div
        class="fd-tool-header__element"
      >
        
            
        <img
          alt="SAP"
          class="fd-tool-header__logo"
          src="//unpkg.com/fundamental-styles/dist/images/sap-logo.png"
          srcset="//unpkg.com/fundamental-styles/dist/images/sap-logo@2x.png 1x, //unpkg.com/fundamental-styles/dist/images/sap-logo@3x.png 2x, //unpkg.com/fundamental-styles/dist/images/sap-logo@4x.png 3x"
        />
        

        
      </div>
      
        
      <div
        class="fd-tool-header__element"
      >
        
            
        <button
          aria-label="mega menu"
          class="fd-button fd-button--transparent fd-button--menu fd-tool-header__button"
        >
          
                
          <i
            class="sap-icon--megamenu"
          />
          
            
        </button>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tool-header__group"
    >
      
        
      <div
        class="fd-tool-header__element"
      >
        
            
        <button
          aria-label="more items"
          class="fd-button fd-button--transparent fd-tool-header__button"
        >
          
                 
          <i
            class="sap-icon--overflow"
          />
          
            
        </button>
        
        
      </div>
      
        
      <div
        class="fd-tool-header__element"
      >
         
            
        <span
          aria-label="John Doe"
          class="fd-avatar fd-avatar--xs fd-avatar--circle fd-avatar--thumbnail"
          role="img"
          style="background-image: url('/assets/images/avatars/1.svg')"
        />
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <br />
  

  <h4>
    Size M (2rem)
  </h4>
  

  <div
    class="fd-tool-header fd-tool-header--md"
    style="max-width: 700px;"
  >
    
    
    <div
      class="fd-tool-header__group"
    >
      
        
      <div
        class="fd-tool-header__element"
      >
        
            
        <img
          alt="SAP"
          class="fd-tool-header__logo"
          src="//unpkg.com/fundamental-styles/dist/images/sap-logo.png"
          srcset="//unpkg.com/fundamental-styles/dist/images/sap-logo@2x.png 1x, //unpkg.com/fundamental-styles/dist/images/sap-logo@3x.png 2x, //unpkg.com/fundamental-styles/dist/images/sap-logo@4x.png 3x"
        />
        

        
      </div>
      
        
      <div
        class="fd-tool-header__element"
      >
        
            
        <h4
          class="fd-title fd-title--h5 fd-tool-header__title"
        >
          Product Name
        </h4>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tool-header__group"
    >
      
        
      <div
        class="fd-tool-header__element"
      >
        
            
        <button
          aria-label="notification"
          class="fd-button fd-button--compact fd-button--transparent fd-tool-header__button"
        >
          
                 
          <i
            class="sap-icon--bell"
          />
          
            
        </button>
        
        
      </div>
      
        
      <div
        class="fd-tool-header__element"
      >
         
            
        <span
          aria-label="John Doe"
          class="fd-avatar fd-avatar--xs fd-avatar--circle fd-avatar--thumbnail"
          role="img"
          style="background-image: url('/assets/images/avatars/1.svg')"
        />
        
        
      </div>
      
        
      <div
        class="fd-tool-header__element"
      >
        
            
        <button
          aria-label="user menu control"
          class="fd-button fd-button--compact fd-button--transparent fd-tool-header__button"
        >
          
                 
          <i
            class="sap-icon--grid"
          />
          
            
        </button>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <br />
  

  <h4>
    Size L (2rem)
  </h4>
  

  <div
    class="fd-tool-header fd-tool-header--lg"
    style="max-width: 1050px;"
  >
    
    
    <div
      class="fd-tool-header__group"
    >
      
        
      <div
        class="fd-tool-header__element"
      >
        
            
        <img
          alt="SAP"
          class="fd-tool-header__logo"
          src="//unpkg.com/fundamental-styles/dist/images/sap-logo.png"
          srcset="//unpkg.com/fundamental-styles/dist/images/sap-logo@2x.png 1x, //unpkg.com/fundamental-styles/dist/images/sap-logo@3x.png 2x, //unpkg.com/fundamental-styles/dist/images/sap-logo@4x.png 3x"
        />
        

        
      </div>
      
        
      <div
        class="fd-tool-header__element"
      >
        
            
        <button
          aria-label="megamenu"
          class="fd-button fd-button--compact fd-button--transparent fd-button--menu fd-tool-header__button"
        >
          
                
          <h4
            class="fd-title fd-title--h5 fd-tool-header__title"
          >
            Product Name
          </h4>
          
                
          <i
            class="sap-icon--megamenu"
          />
          
            
        </button>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tool-header__group"
    >
      
        
      <div
        class="fd-tool-header__element"
      >
        
            
        <button
          aria-label="notification"
          class="fd-button fd-button--compact fd-button--transparent fd-tool-header__button"
        >
          
                 
          <i
            class="sap-icon--bell"
          />
          
            
        </button>
        
        
      </div>
      
        
      <div
        class="fd-tool-header__element"
      >
         
            
        <span
          aria-label="John Doe"
          class="fd-avatar fd-avatar--xs fd-avatar--circle fd-avatar--thumbnail"
          role="img"
          style="background-image: url('/assets/images/avatars/1.svg')"
        />
        
        
      </div>
      
        
      <div
        class="fd-tool-header__element"
      >
        
            
        <button
          aria-label="user menu control"
          class="fd-button fd-button--compact fd-button--transparent fd-tool-header__button"
        >
          
                 
          <i
            class="sap-icon--grid"
          />
          
            
        </button>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <br />
  

  <h4>
    Size XL (3rem)
  </h4>
  

  <div
    class="fd-tool-header fd-tool-header--xl"
  >
    
    
    <div
      class="fd-tool-header__group"
    >
      
        
      <div
        class="fd-tool-header__element"
      >
        
            
        <img
          alt="SAP"
          class="fd-tool-header__logo"
          src="//unpkg.com/fundamental-styles/dist/images/sap-logo.png"
          srcset="//unpkg.com/fundamental-styles/dist/images/sap-logo@2x.png 1x, //unpkg.com/fundamental-styles/dist/images/sap-logo@3x.png 2x, //unpkg.com/fundamental-styles/dist/images/sap-logo@4x.png 3x"
        />
        

        
      </div>
      
        
      <div
        class="fd-tool-header__element"
      >
        
            
        <button
          aria-label="mega menu"
          class="fd-button fd-button--compact fd-button--transparent fd-button--menu fd-tool-header__button"
        >
          
                
          <span
            class="fd-button__text fd-tool-header__button-text"
          >
            Product Name
          </span>
          
                
          <i
            class="sap-icon--megamenu"
          />
          
            
        </button>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tool-header__group"
    >
      
        
      <div
        class="fd-tool-header__element"
      >
        
            
        <div
          class="fd-input-group fd-tool-header__input-group"
        >
          
                
          <input
            class="fd-input fd-input--compact fd-input-group__input"
            id="aqwsdewfwfw"
            name=""
            placeholder="Search..."
            type="text"
          />
          
                
          <span
            class="fd-input-group__addon fd-input-group__addon--button fd-input-group__addon--compact"
          >
            
                    
            <button
              aria-label="Select"
              class="fd-input-group__button fd-button fd-button--icon fd-button--transparent fd-button--compact fd-tool-header__button"
            >
               
                        
              <i
                class="sap-icon--navigation-down-arrow"
              />
              
                    
            </button>
            
                    
          </span>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tool-header__element"
      >
        
            
        <button
          aria-label="notification"
          class="fd-button fd-button--compact fd-button--transparent fd-tool-header__button"
        >
          
                 
          <i
            class="sap-icon--bell"
          />
          
            
        </button>
        
        
      </div>
      
        
      <div
        class="fd-tool-header__element"
      >
         
            
        <span
          aria-label="John Doe"
          class="fd-avatar fd-avatar--xs fd-avatar--circle fd-avatar--thumbnail"
          role="img"
          style="background-image: url('/assets/images/avatars/1.svg')"
        />
        
        
      </div>
      
        
      <div
        class="fd-tool-header__element"
      >
        
            
        <button
          aria-label="user menu control"
          class="fd-button fd-button--compact fd-button--transparent fd-tool-header__button"
        >
          
                 
          <i
            class="sap-icon--grid"
          />
          
            
        </button>
        
        
      </div>
      
    
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Tool Header Responsive Paddings 1`] = `
<div
  class="fd-tool-header fd-tool-header--responsive-paddings"
>
  
    
  <div
    class="fd-tool-header__group"
  >
    
        
    <div
      class="fd-tool-header__element"
    >
      
            
      <img
        alt="SAP"
        class="fd-tool-header__logo"
        src="//unpkg.com/fundamental-styles/dist/images/sap-logo.png"
        srcset="//unpkg.com/fundamental-styles/dist/images/sap-logo@2x.png 1x, //unpkg.com/fundamental-styles/dist/images/sap-logo@3x.png 2x, //unpkg.com/fundamental-styles/dist/images/sap-logo@4x.png 3x"
      />
      

        
    </div>
    
        
    <div
      class="fd-tool-header__element"
    >
      
            
      <h4
        class="fd-title fd-title--h5 fd-tool-header__title"
      >
        Product Name
      </h4>
      
        
    </div>
    
        
    <div
      class="fd-tool-header__element"
    >
      
            
      <label
        class="fd-form-label fd-tool-header__label"
        for="input-1"
      >
        Second Title
      </label>
      
        
    </div>
    
    
  </div>
  
    
  <div
    class="fd-tool-header__group"
  >
    
        
    <div
      class="fd-tool-header__element"
    >
      
            
      <button
        aria-label="search"
        class="fd-button fd-button--compact fd-button--transparent fd-tool-header__button"
      >
        
                 
        <i
          class="sap-icon--search"
        />
        
            
      </button>
      
        
    </div>
    
        
    <div
      class="fd-tool-header__element"
    >
      
            
      <button
        aria-label="task"
        class="fd-button fd-button--compact fd-button--transparent fd-tool-header__button"
      >
        
                 
        <i
          class="sap-icon--circle-task"
        />
        
            
      </button>
      
        
    </div>
    
        
    <div
      class="fd-tool-header__element"
    >
      
            
      <button
        aria-label="notification"
        class="fd-button fd-button--compact fd-button--transparent fd-tool-header__button"
      >
        
                 
        <i
          class="sap-icon--bell"
        />
        
            
      </button>
      
        
    </div>
    
        
    <div
      class="fd-tool-header__element"
    >
       
            
      <span
        aria-label="John Doe"
        class="fd-avatar fd-avatar--xs fd-avatar--circle fd-avatar--thumbnail"
        role="img"
        style="background-image: url('/assets/images/avatars/1.svg')"
      />
      
        
    </div>
    
        
    <div
      class="fd-tool-header__element"
    >
      
            
      <button
        aria-label="user menu control"
        class="fd-button fd-button--compact fd-button--transparent fd-tool-header__button"
      >
        
                 
        <i
          class="sap-icon--grid"
        />
        
            
      </button>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Tool Header Tool Header with Controls 1`] = `
<div
  class="fd-tool-header"
>
  
    
  <div
    class="fd-tool-header__group"
  >
    
        
    <div
      class="fd-tool-header__element"
    >
      
            
      <img
        alt="SAP"
        class="fd-tool-header__logo"
        src="//unpkg.com/fundamental-styles/dist/images/sap-logo.png"
        srcset="//unpkg.com/fundamental-styles/dist/images/sap-logo@2x.png 1x, //unpkg.com/fundamental-styles/dist/images/sap-logo@3x.png 2x, //unpkg.com/fundamental-styles/dist/images/sap-logo@4x.png 3x"
      />
      

        
    </div>
    
        
    <div
      class="fd-tool-header__element"
    >
      
            
      <h4
        class="fd-title fd-title--h5 fd-tool-header__title"
      >
        Product Name
      </h4>
      
        
    </div>
    
        
    <div
      class="fd-tool-header__element"
    >
      
            
      <label
        class="fd-form-label fd-tool-header__label"
        for="input-1"
      >
        Second Title
      </label>
      
        
    </div>
    
    
  </div>
  
    
  <div
    class="fd-tool-header__group"
  >
    
        
    <div
      class="fd-tool-header__element"
    >
      
            
      <span
        class="sap-icon sap-icon--cart fd-tool-header__icon fd-tool-header__icon--contrast"
      />
      
        
    </div>
    
        
    <div
      class="fd-tool-header__element"
    >
      
            
      <span
        class="fd-object-status fd-object-status--inverted  fd-tool-header__object-status--negative"
      >
        
                
        <i
          class="fd-object-status__icon sap-icon--message-error"
          role="presentation"
        />
        
                
        <span
          class="fd-object-status__text"
        >
          Negative
        </span>
        
            
      </span>
      
        
    </div>
    
        
    <div
      class="fd-tool-header__element"
    >
      
            
      <span
        class="fd-object-status fd-object-status--inverted fd-tool-header__object-status--positive "
      >
        
                
        <i
          class="fd-object-status__icon sap-icon--message-success"
          role="presentation"
        />
        
                
        <span
          class="fd-object-status__text"
        >
          Positive
        </span>
        
            
      </span>
      
        
    </div>
    
        
    <div
      class="fd-tool-header__element"
    >
      
            
      <button
        aria-label="search"
        class="fd-button fd-button--compact fd-button--transparent fd-tool-header__button"
      >
        
                 
        <i
          class="sap-icon--search"
        />
        
            
      </button>
      
        
    </div>
    
        
    <div
      class="fd-tool-header__element"
    >
      
            
      <button
        aria-label="task"
        class="fd-button fd-button--compact fd-button--transparent fd-tool-header__button"
      >
        
                 
        <i
          class="sap-icon--circle-task"
        />
        
            
      </button>
      
        
    </div>
    
        
    <div
      class="fd-tool-header__element"
    >
      
            
      <button
        aria-label="notification"
        class="fd-button fd-button--compact fd-button--transparent fd-tool-header__button"
      >
        
                 
        <i
          class="sap-icon--bell"
        />
        
            
      </button>
      
        
    </div>
    
        
    <div
      class="fd-tool-header__element"
    >
       
            
      <span
        aria-label="John Doe"
        class="fd-avatar fd-avatar--xs fd-avatar--circle fd-avatar--thumbnail"
        role="img"
        style="background-image: url('/assets/images/avatars/1.svg')"
      />
      
        
    </div>
    
        
    <div
      class="fd-tool-header__element"
    >
      
            
      <button
        aria-label="user menu control"
        class="fd-button fd-button--compact fd-button--transparent fd-tool-header__button"
      >
        
                 
        <i
          class="sap-icon--grid"
        />
        
            
      </button>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Tool Header Tool Header with Menu Buttons 1`] = `
<div
  class="fd-tool-header fd-tool-header--menu"
>
  
    
  <div
    class="fd-tool-header__group"
  >
    
        
    <div
      class="fd-tool-header__element"
    >
      
            
      <button
        aria-label="menu"
        class="fd-button fd-button--compact fd-button--transparent fd-tool-header__button"
      >
        
                
        <i
          class="sap-icon--menu2"
        />
        
            
      </button>
      
        
    </div>
    
        
    <div
      class="fd-tool-header__element"
    >
      
            
      <button
        aria-label="menu button file"
        class="fd-button fd-button--compact fd-button--transparent fd-button--menu fd-tool-header__button"
      >
        
                
        <span
          class="fd-button__text"
        >
          File
        </span>
        
                
        <i
          class="sap-icon--slim-arrow-down"
        />
        
            
      </button>
      
        
    </div>
    
        
    <div
      class="fd-tool-header__element"
    >
      
            
      <button
        aria-label="menu button edit"
        class="fd-button fd-button--compact fd-button--transparent fd-button--menu fd-tool-header__button"
      >
        
                
        <span
          class="fd-button__text"
        >
          Edit
        </span>
        
                
        <i
          class="sap-icon--slim-arrow-down"
        />
        
            
      </button>
      
        
    </div>
    
        
    <div
      class="fd-tool-header__element"
    >
      
            
      <button
        aria-label="menu button view"
        class="fd-button fd-button--compact fd-button--transparent fd-button--menu fd-tool-header__button"
      >
        
                
        <span
          class="fd-button__text"
        >
          View
        </span>
        
                
        <i
          class="sap-icon--slim-arrow-down"
        />
        
            
      </button>
      
        
    </div>
    
        
    <div
      class="fd-tool-header__element"
    >
      
            
      <button
        aria-label="menu button delete"
        class="fd-button fd-button--compact fd-button--transparent fd-button--menu fd-tool-header__button"
      >
        
                
        <span
          class="fd-button__text"
        >
          Delete
        </span>
        
                
        <i
          class="sap-icon--slim-arrow-down"
        />
        
            
      </button>
      
        
    </div>
    
    
  </div>
  
    
  <div
    class="fd-tool-header__group"
  >
    
        
    <div
      class="fd-tool-header__element"
    >
      
            
      <span
        class="fd-object-status fd-tool-header__object-status--critical"
      >
        
                
        <i
          class="fd-object-status__icon sap-icon--message-warning"
          role="presentation"
        />
        
                
        <span
          class="fd-object-status__text"
        >
          Status
        </span>
        
            
      </span>
      
        
    </div>
    
        
    <div
      class="fd-tool-header__element"
    >
      
            
      <button
        class="fd-button fd-button--compact fd-button--transparent fd-tool-header__button"
      >
        
                
        <span
          class="fd-button__text"
        >
          User Account
        </span>
        
            
      </button>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Tool Header Tool Header with Side Navigation Menu Button 1`] = `
<div
  class="fd-tool-header fd-tool-header--menu"
>
  
    
  <div
    class="fd-tool-header__group"
  >
    
        
    <div
      class="fd-tool-header__element"
    >
      
            
      <button
        aria-label="menu"
        class="fd-button fd-button--compact fd-button--transparent fd-tool-header__button"
      >
        
                
        <i
          class="sap-icon--menu2"
        />
        
            
      </button>
      
        
    </div>
    
        
    <div
      class="fd-tool-header__element"
    >
      
            
      <img
        alt="SAP"
        class="fd-tool-header__logo"
        src="//unpkg.com/fundamental-styles/dist/images/sap-logo.png"
        srcset="//unpkg.com/fundamental-styles/dist/images/sap-logo@2x.png 1x, //unpkg.com/fundamental-styles/dist/images/sap-logo@3x.png 2x, //unpkg.com/fundamental-styles/dist/images/sap-logo@4x.png 3x"
        width="48"
      />
      
        
    </div>
    
        
    <div
      class="fd-tool-header__element"
    >
      
            
      <h4
        class="fd-title fd-title--h5 fd-tool-header__title"
      >
        Product Name
      </h4>
      
        
    </div>
    
        
    <div
      class="fd-tool-header__element"
    >
      
            
      <label
        class="fd-text fd-tool-header__text"
        for="input-1"
      >
        Description (Text Element)
      </label>
      
        
    </div>
    
    
  </div>
  
    
  <div
    class="fd-tool-header__group"
  >
    
        
    <div
      class="fd-tool-header__element"
    >
      
            
      <div
        class="fd-input-group fd-tool-header__input-group"
      >
        
                
        <input
          class="fd-input fd-input--compact fd-input-group__input"
          id="aqwsdewfwfw"
          name=""
          placeholder="Search..."
          type="text"
        />
        
                
        <span
          class="fd-input-group__addon fd-input-group__addon--button fd-input-group__addon--compact"
        >
          
                    
          <button
            aria-label="Search"
            class="fd-input-group__button fd-button fd-button--icon fd-button--transparent fd-button--compact fd-tool-header__button"
          >
             
                        
            <i
              class="sap-icon--search"
            />
            
                    
          </button>
          
                    
        </span>
        
            
      </div>
      
        
    </div>
    
        
    <div
      class="fd-tool-header__element"
    >
      
            
      <button
        aria-label="task"
        class="fd-button fd-button--compact fd-button--transparent fd-tool-header__button"
      >
        
                 
        <i
          class="sap-icon--circle-task"
        />
        
            
      </button>
      
        
    </div>
    
        
    <div
      class="fd-tool-header__element"
    >
      
            
      <button
        aria-label="notification"
        class="fd-button fd-button--compact fd-button--transparent fd-tool-header__button"
      >
        
                 
        <i
          class="sap-icon--bell"
        />
        
            
      </button>
      
        
    </div>
    
        
    <div
      class="fd-tool-header__element"
    >
       
            
      <span
        aria-label="John Doe"
        class="fd-avatar fd-avatar--xs fd-avatar--circle fd-avatar--thumbnail"
        role="img"
        style="background-image: url('/assets/images/avatars/1.svg')"
      />
      
        
    </div>
    
        
    <div
      class="fd-tool-header__element"
    >
      
            
      <button
        aria-label="user menu control"
        class="fd-button fd-button--compact fd-button--transparent fd-tool-header__button"
      >
        
                 
        <i
          class="sap-icon--grid"
        />
        
            
      </button>
      
        
    </div>
    
    
  </div>
  

</div>
`;
